-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 2
-
Mac OSX 10.7.5
-
-
66e3e1f75b9698a8aaa92efeebff89f83afc83c4
When you create a modal dialog now, there aren't any buttons on the top bar to manipulate the window so you have to provide your own cancel button in order for the window to be closable.
This is particularly bad for QWizard as there is no built in cancel button so you have to add one to every page or subclass and modify QWizard itself for it to be usable.
- is required for
-
QTIFW-490 Installer has no minimize button
-
- Closed
-
For Gerrit Dashboard: QTBUG-28385 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
58967,1 | OS X: a dialog should always have an enabled titlebar close button | release | qt/qtbase | Status: ABANDONED | -1 | 0 |
67646,2 | Unify wizards with TOC and cancel button. | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
68329,1 | OS X: a dialog should always have an enabled titlebar close button | stable | qt/qtbase | Status: MERGED | +2 | 0 |